--- a/app/views/pages/_selection_fields.html.erb
+++ b/app/views/pages/_selection_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="nested-fields">
-  <%= f.input :title, placeholder: "new outcome", label: false, required: true %>
+  <%= f.input :title, placeholder: "outcome (Yes, No...)", label: false, required: true %>
   <%= link_to_remove_association f do %>
     <i class="fa fa-times"></i>
   <% end %>
