--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import 'bootstrap-datetimepicker';
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "bootstrap-select";
 
 // Your CSS
 @import "layout/index";
@@ -16,5 +17,7 @@
 @import "vendor/index";
 @import "pages/chatbox";
 @import "pages/confirm_winner";
+
+
 
 
