--- a/app/assets/stylesheets/pages/_betsshow.scss
+++ b/app/assets/stylesheets/pages/_betsshow.scss
@@ -1,3 +1,12 @@
+.settings {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+
+
 .tags {
   margin-right: 20px;
 }
