--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
           <div class="body-tabs">
             <ul class="tabs">
               <li class="tab-link current" data-tab="description">
-                <%=image_tag "warning.png", class:"bet_creation-icon"%>
+                <%=image_tag "file.png", class:"bet_creation-icon"%>
                 <p>1. terms</p>
               </li>
               <li class="tab-link" data-tab="selections"><%=image_tag "list.png", class:"bet_creation-icon"%>
