fixed some shit

--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -1,3 +1,4 @@
+
 .card-invites {
   display: flex;
   height: 120px;
@@ -49,4 +50,5 @@
   margin-bottom: 25px;
   text-align: center;
   font-size: 29px;
+  color:#254C62;
 }
