--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row betindexppp">
     <h1 class="text-center">All your bets</h1>
     <% @bets.each do |bet| %>
     <% if bet.selection.pool.end_date >= DateTime.now %>
