--- a/app/assets/stylesheets/pages/_pools_show.scss
+++ b/app/assets/stylesheets/pages/_pools_show.scss
@@ -43,8 +43,17 @@
   justify-content: space-around;
 
 
-  .pool-confirm_winner {
+  .confirm-winner {
     margin-top: 20px;
+  }
+
+  .placebet {
+    margin-top: 20px;
+  }
+
+  .invite {
+    margin-top: 20px;
+
   }
 
   h1 {
