--- a/app/views/pools/_invite.html.erb
+++ b/app/views/pools/_invite.html.erb
@@ -10,6 +10,9 @@
     <i class="fa fa-times"></i>
   <% end %>
   </div>
+
+  <%= f.submit "Invite Now", class: "btn btn-primary selection-submit" %>
+
     <% end %>
 
 
