--- a/app/assets/stylesheets/pages/_share_links.scss
+++ b/app/assets/stylesheets/pages/_share_links.scss
@@ -7,11 +7,14 @@
 html,
 body {
   background: #fafafa;
-  color: #fff;
   font-family: $base-font;
 
   a {
     color: #fff;
+  }
+
+  h1, h2 {
+    color: $gray;
   }
 
 }
