--- a/app/views/pools/_confirm_winner.html.erb
+++ b/app/views/pools/_confirm_winner.html.erb
@@ -66,10 +66,10 @@
       document.getElementById("declarewinner").disabled = true;
     };
 
-    $('.edit_pool').submit(function(e) {
-      confirm('You have selected: ' + $('#declarewinner option:selected').text() + ' as the winner. Are you sure?')
-      $('.hiddeable').hide();
-    })
+    // $('.edit_pool').submit(function(e) {
+    //   confirm('You have selected: ' + $('#declarewinner option:selected').text() + ' as the winner. Are you sure?')
+    //   $('.hiddeable').hide();
+    // })
 
     $('#admin-change-winner').click(function() {
       $('.hiddeable').show();
