--- a/app/assets/stylesheets/components/_poolcards.scss
+++ b/app/assets/stylesheets/components/_poolcards.scss
@@ -9,7 +9,6 @@
   border-radius: 5px;
   box-shadow: 2px 2px 4px rgba(200,200,200,0.6);
 }
-
 .card-icon {
   height: 30px;
   margin-right: 10px;
@@ -69,4 +68,6 @@ hr {
   border: 0;
   border-top: 1px solid #eeeeee;
 }
-
+.listofcard li{
+  padding-left: 0px;
+}
