--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <% @user.invites.each do |invite| %>
-          <div class="col-xs-12 col-sm-4">
+          <div class="col-xs-12 col-sm-6 col-lg-4">
             <div class="invite-tag">
               <p>Invite</p>
             </div>
