--- a/app/assets/stylesheets/pages/_placeyourbet.scss
+++ b/app/assets/stylesheets/pages/_placeyourbet.scss
@@ -1,6 +1,7 @@
 .confirmbutton{
   text-align: center;
   margin-top: 25px;
+  margin-bottom: 25px;
   width: 100%;
   background: $blue;
   border: none;
