some beautiful changes

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -12,9 +12,7 @@
   color:white;
 
 }
-.airbnblogo h2{
 
-}
 /* Optional class to fix the navbar on top */
 .navbar-wagon-fixed {
   position: fixed;
@@ -26,7 +24,8 @@
 
 /* Navbar logo */
 .navbar-wagon-brand img {
-  width: 50px;
+  width: 40px;
+  align-items: center;
 }
 
 /* Navbar right section (with form, links, button) */
