--- a/app/assets/stylesheets/pages/_pools_show.scss
+++ b/app/assets/stylesheets/pages/_pools_show.scss
@@ -17,6 +17,13 @@
   border: solid black 1px;
 }
 
+.pop-up {
+  text-align: center;
+  font-family: $header-font;
+  font-size: 25px;
+  color: $green;
+}
+
 .betselections{
   font-family: $base-font;
   font-size: 25px;
