--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -44,6 +44,15 @@
   text-align: center;
   border-radius: 5px 5px 0px 0px;
 }
+.invitetaglate{
+    background-color: red;
+  height: 20px;
+  margin: 0px 0px;
+  font-style: italic;
+  text-align: center;
+  border-radius: 5px 5px 0px 0px;
+
+}
 
 .invites-page {
   margin-top: 15px;
