--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Edit your profile</h1>
+<h1 id="headeredit">Edit your profile</h1>
   <%= simple_form_for @user do |f|%>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
@@ -7,4 +7,5 @@
     <%= f.input :username %>
     <%= f.submit "Save your changes", class: "btn btn-primary edit-profile" %>
   <% end %>
+  </div>
 </div>
