--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -6,6 +6,13 @@
   background-color: rgba(55, 55, 55, 0.5);
   color: white;
 }
+.log-in h1 {
+  color: #CCCCCC;
+}
+#new_user label {
+  color:#CCCCCC;
+  font-size: 20px;
+}
 
 .facebook{
   text-align: center;
